--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -12,7 +12,29 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      
+
+      - name: create sample script
+        run: |
+          mkdir -p .debpkg/usr/bin
+          mkdir -p .debpkg/usr/lib/samplescript
+          echo -e "echo sample" > .debpkg/usr/bin/samplescript
+          chmod +x .debpkg/usr/bin/samplescript
+          echo -e "a=1" > .debpkg/usr/lib/samplescript/samplescript.conf
+
+          # create DEBIAN directory if you want to add other pre/post scripts
+          mkdir -p .debpkg/DEBIAN
+          echo -e "echo postinst" > .debpkg/DEBIAN/postinst
+          chmod +x .debpkg/DEBIAN/postinst
+      - uses: jiro4989/build-deb-action@v2
+        with:
+          package: samplescript
+          package_root: .debpkg
+          maintainer: Apacelus
+          version: v0.0.0
+          arch: 'amd64'
+          depends: 'cgpt vboot-kernel-util'
+          desc: 'this is sample package.'
+
       - name: Deploying repo
         uses: jrandiny/apt-repo-action@v1
         with:
