--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -32,7 +32,7 @@ jobs:
           maintainer: Apacelus
           version: v0.0.0
           arch: 'amd64'
-          depends: 'cgpt vboot-kernel-util'
+          depends: 'cgpt, vboot-kernel-util'
           desc: 'this is sample package.'
 
       - name: Deploying repo
