--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -39,9 +39,9 @@ jobs:
         uses: jrandiny/apt-repo-action@v2.0.1
         with:
           github_token: ${{ secrets.PAT }}
-          arch: |
+          repo_supported_arch: |
             amd64
-          version: |
+          repo_supported_version: |
             kinetic
             jammy
           file: samplescript.deb
