--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -44,7 +44,7 @@ jobs:
           repo_supported_version: |
             kinetic
             jammy
-          file: samplescript*.deb
+          file: samplescript_0.0.0_amd64.deb
           file_target_version: kinetic
           public_key: ${{ secrets.PUBLIC }}
           private_key: ${{ secrets.PRIVATE }}
