--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -39,13 +39,12 @@ jobs:
         uses: smeinecke/apt-repo-action@v2.1.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          repo_supported_arch: |
-            amd64
+          repo_supported_arch: amd64
           repo_supported_version: |
             kinetic
             jammy
-          file: samplescript_0.0.0_amd64.deb
+          file: samplescript*.deb
           file_target_version: kinetic
           public_key: ${{ secrets.PUBLIC }}
           private_key: ${{ secrets.PRIVATE }}
-          key_passphrase: ${{ secrets.SECRET }}
+          key_passphrase: ""
