--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -42,16 +42,16 @@ jobs:
           name: samplescript_0.0.0_amd64.deb
           path: ./samplescript_0.0.0_amd64.deb
 
-      - name: Deploying repo
-        uses: Apacelus/apt-repo-action@test
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          repo_supported_arch: amd64
-          repo_supported_version: |
-            kinetic
-            jammy
-          file: samplescript*.deb
-          file_target_version: kinetic
-          public_key: ${{ secrets.PUBLIC }}
-          private_key: ${{ secrets.PRIVATE }}
-          key_passphrase: ""
+#      - name: Deploying repo
+#        uses: Apacelus/apt-repo-action@test
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          repo_supported_arch: amd64
+#          repo_supported_version: |
+#            kinetic
+#            jammy
+#         file: samplescript*.deb
+#          file_target_version: kinetic
+#          public_key: ${{ secrets.PUBLIC }}
+#          private_key: ${{ secrets.PRIVATE }}
+#          key_passphrase: ""
