--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: samplescript_0.0.0_amd64.deb
-          path: ./samplescript_0.0.0_amd64.deb
+          path: ./*.deb
 
 #      - name: Deploying repo
 #        uses: Apacelus/apt-repo-action@test
