--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Check if postinstall scripts had an update
       # This oneliner compares the locally stored commit has agains the latest one at the postinstall repo. If they match, the rest of the workflow does not execute
-        if: ${{ '$(cat last_commit_sha.txt)' != '$(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r ".sha")' }} 
+        if: ${{ $(cat last_commit_sha.txt) != $(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r '.sha') }} 
         # Update local commit sha
         run: echo $(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r '.sha') > ./last_commit_sha.txt
       
