--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy-repo:
+  check-sha:
     runs-on: ubuntu-22.04
     steps:
       - name: Checking out repository code
@@ -19,14 +19,20 @@ jobs:
         id: update-check
         # This oneliner compares the locally stored commit has agains the latest one at the postinstall repo and returns either true or false
         run: |
-          echo ::set-output name=remote_sha::"$(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r '.sha')"
-          echo ::set-output name=results::$([[ "$(cat latest_commit.sha)" == "$remote_sha" ]] && echo "true" || echo "false")
+          echo "remote_sha=$(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r '.sha')" >> $GITHUB_OUTPUT
+          echo "results_of_check=$([[ '$(cat latest_commit_sha.txt)' == '${{ env.remote_sha }}' ]] && echo 'true' || echo 'false')"
         
       - name: Check results of update check
         if: steps.git-check.outputs.results == 'true'
-        # Update local commit sha
-        run: |
-          echo $(steps.git-check.outputs.remote_sha) > ./last_commit_sha.txt
+        run: exit 0 # exit sucessfully
+      
+  deploy-repo:
+    runs-on: ubuntu-22.04
+    needs: check-sha # only run if check-sha was successfull
+    steps:
+      
+      - name: Update local commit sha
+        run: echo "${{ env.remote_sha }}" > ./last_commit_sha.txt
       
       - name: Bump version in control file
         run: |
