--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -25,17 +25,14 @@ jobs:
           echo "Match results are:"
           echo $temp_match_results
           echo "results_match=$temp_match_results" >> $GITHUB_OUTPUT
-
-      - name: Check results of update check
-        if: steps.git-check.outputs.results_match == 'false'
-        run: exit 1 # if results dont match, exit without error to trigger second job
       
   deploy-repo:
     runs-on: ubuntu-22.04
+    # Only run script when remote sha has changed, aka the results DONT match
+    if: steps.git-check.outputs.results_match == 'false'
     needs: check-sha # only run if check-sha was successfull
     steps:
-      
-      - name: Update local commit sha
+      - name: Update local commit sha file
         run: echo "${{ steps.update-check.outputs.remote_sha }}" > ./last_commit_sha.txt
       
       - name: Bump version in control file
