--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -29,7 +29,7 @@ jobs:
   deploy-repo:
     runs-on: ubuntu-22.04
     # Only run script when remote sha has changed, aka the results DONT match
-    if: steps.git-check.outputs.results_match == 'false'
+    if: ${{ steps.git-check.outputs.results_match == 'false' }}
     needs: check-sha # only run if check-sha was successfull
     steps:
       - name: Update local commit sha file
