--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   check-sha:
     runs-on: ubuntu-22.04
+    outputs:
+      sha_match: ${{ steps.check-sha.outputs.results }}
+
     steps:
       - name: Checking out repository code
         uses: actions/checkout@v3
@@ -16,7 +19,7 @@ jobs:
           fetch-depth: 1
       
       - name: Run postinstall scripts update check
-        id: update-check
+        id: check-sha
         # This oneliner compares the locally stored commit has agains the latest one at the postinstall repo and returns either true or false
         run: |
           temp_sha=$(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r '.sha')
@@ -24,13 +27,13 @@ jobs:
           temp_match_results=$([[ "$(cat last_commit_sha.txt)" == "$temp_sha" ]] && echo "true" || echo "false")
           echo "Match results are:"
           echo $temp_match_results
-          echo "results_match=$temp_match_results" >> $GITHUB_OUTPUT
+          echo "results=$temp_match_results" >> $GITHUB_OUTPUT
       
   deploy-repo:
     runs-on: ubuntu-22.04
     needs: check-sha # only run if check-sha was successfull
     # Only run script when remote sha has changed, aka the results DONT match
-    if: needs.check-sha.update-check.outputs.results_match == 'false'
+    if: needs.check-sha.update-check.outputs.sha_match == 'false'
     steps:
       - name: Update local commit sha file
         run: echo "${{ steps.update-check.outputs.remote_sha }}" > ./last_commit_sha.txt
