--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: check-sha # only run if check-sha was successfull
     # Only run script when remote sha has changed, aka the results DONT match
-    if: needs.check-sha.update-check.outputs.sha_match == 'false'
+    if: needs.check-sha.outputs.sha_match == 'false'
     steps:
       - name: Update local commit sha file
         run: echo "${{ steps.update-check.outputs.remote_sha }}" > ./last_commit_sha.txt
