--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-22.04
     outputs:
       sha_match: ${{ steps.check-sha.outputs.results }}
-
     steps:
       - name: Checking out repository code
         uses: actions/checkout@v3
@@ -35,6 +34,11 @@ jobs:
     # Only run script when remote sha has changed, aka the results DONT match
     if: needs.check-sha.outputs.sha_match == 'false'
     steps:
+      - name: Checking out repository code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
       - name: Update local commit sha file
         run: echo "${{ steps.update-check.outputs.remote_sha }}" > ./last_commit_sha.txt
       
