--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-22.04
     outputs:
       sha_match: ${{ steps.check-sha.outputs.results }}
+      remote_sha: ${{ steps.check-sha.outputs.remote_sha }}
     steps:
       - name: Checking out repository code
         uses: actions/checkout@v3
@@ -40,7 +41,7 @@ jobs:
           fetch-depth: 1
 
       - name: Update local commit sha file
-        run: echo "${{ steps.update-check.outputs.remote_sha }}" > ./last_commit_sha.txt
+        run: echo "${{ needs.check-sha.outputs.remote_sha }}" > ./last_commit_sha.txt
       
       - name: Bump version in control file
         run: |
