--- a/.github/workflows/deploy-repo.yml
+++ b/.github/workflows/deploy-repo.yml
@@ -66,12 +66,12 @@ jobs:
       - name: Creating debian package
         run: bash pack-deb.sh
 
-      - name: Updating files in main repo
+      - name: Updating files in main branch
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           # Optional. Commit message for the created commit.
           # Defaults to "Apply automatic changes"
-          commit_message: Update files in main repo
+          commit_message: Update files in main branch
           # Only include needed files
           file_pattern: 'control sha_cache.txt'
 
