--- a/.github/workflows/update-utils.yml
+++ b/.github/workflows/update-utils.yml
@@ -1,4 +1,4 @@
-name: Deploying apt repo
+name: Updating utils
 on:
   push:
     branches: [ "main" ]
@@ -26,9 +26,9 @@ jobs:
           postinstall_latest_sha=$(curl -s https://api.github.com/repos/eupnea-linux/postinstall-scripts/commits/main | jq -r '.sha')
           audio_latest_sha=$(curl -s https://api.github.com/repos/eupnea-linux/audio-scripts/commits/main | jq -r '.sha')
           
-          # Check remote shas agains cached ones
-          postinstall_match_results=$([[ "$(cat sha_cache.txt | head -1)" == "$postinstall_latest_sha" ]] && echo "true" || echo "false")
-          audio_match_results=$([[ "$(cat sha_cache.txt | tail -1)" == "$audio_latest_sha" ]] && echo "true" || echo "false")
+          # Check remote shas against cached ones
+          postinstall_match_results=$([[ "$(cat utils_sha-cache.txt | head -1)" == "$postinstall_latest_sha" ]] && echo "true" || echo "false")
+          audio_match_results=$([[ "$(cat utils_sha-cache.txt | tail -1)" == "$audio_latest_sha" ]] && echo "true" || echo "false")
           
           # Compare results and determine if there was an update in any of the repos
           if [[ "$postinstall_match_results" == "true" && "$audio_match_results" == "true" ]]; then
@@ -40,7 +40,6 @@ jobs:
           # Add shas to output
           echo "postinstall_remote_sha=$postinstall_latest_sha" >> $GITHUB_OUTPUT
           echo "audio_remote_sha=$audio_latest_sha" >> $GITHUB_OUTPUT
-  
 
   deploy-repo:
     runs-on: ubuntu-22.04
@@ -55,16 +54,16 @@ jobs:
 
       - name: Update local commits sha file
         run: |
-          echo "${{ needs.check-sha.outputs.postinstall_remote_sha }}"$'\n'"${{ needs.check-sha.outputs.audio_remote_sha }}" > sha_cache.txt
+          echo "${{ needs.check-sha.outputs.postinstall_remote_sha }}"$'\n'"${{ needs.check-sha.outputs.audio_remote_sha }}" > utils_sha-cache.txt
 
-      - name: Bump version in control file
+      - name: Bump version in utils control file
         run: |
-          CURRENT_VERSION=$(sed -n '2p' control | sed 's/.*://' | xargs) # get current version from control file
+          CURRENT_VERSION=$(sed -n '2p' utils-control | sed 's/.*://' | xargs) # get current version from control file
           NEXTVERSION=$(echo ${CURRENT_VERSION} | awk -F. -v OFS=. '{$NF += 1 ; print}') # bump version
-          sed -i "2s/.*/Version: ${NEXTVERSION}/" control # update version in control file
+          sed -i "2s/.*/Version: ${NEXTVERSION}/" utils-control # update version in control file
 
-      - name: Creating debian package
-        run: bash pack-deb.sh
+      - name: Creating utils deb package
+        run: bash pack-utils.sh
 
       - name: Updating files in main branch
         uses: stefanzweifel/git-auto-commit-action@v4
@@ -73,9 +72,9 @@ jobs:
           # Defaults to "Apply automatic changes"
           commit_message: Update files in main branch
           # Only include needed files
-          file_pattern: 'control sha_cache.txt'
+          file_pattern: 'utils-control utils-sha_cache.txt'
 
-      - name: Deploying repo
+      - name: Adding util packages
         uses: smeinecke/apt-repo-action@v2.1.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -85,7 +84,10 @@ jobs:
             jammy
             stable
           file: eupnea-utils*.deb
-          file_target_version: kinetic
+          file_target_version: |
+            kinetic
+            jammy
+            stable
           public_key: ${{ secrets.PUBLIC }}
           private_key: ${{ secrets.PRIVATE }}
           key_passphrase: ""
