--- a/.github/workflows/update-system.yml
+++ b/.github/workflows/update-system.yml
@@ -25,7 +25,7 @@ jobs:
           latest_sha=$(curl -s https://api.github.com/repos/eupnea-linux/system-update/commits/main | jq -r '.sha')
           
           # Check remote sha against cached one
-          match_results=$([[ "$(cat system-sha_cache.txt)" == "$latest_sha" ]] && echo "true" || echo "false")
+          match_results=$([[ "$(cat system_sha-cache.txt)" == "$latest_sha" ]] && echo "true" || echo "false")
           echo "match_results=$match_results" >> $GITHUB_OUTPUT
           
           # Add sha to output
@@ -44,7 +44,7 @@ jobs:
 
       - name: Update local commits sha file
         run: |
-          echo "${{ needs.check-sha.outputs.remote_sha }}" > system-sha_cache.txt
+          echo "${{ needs.check-sha.outputs.remote_sha }}" > system_sha-cache.txt
 
       - name: Bump version in system control file
         run: |
@@ -62,7 +62,7 @@ jobs:
           # Defaults to "Apply automatic changes"
           commit_message: Update files in main branch
           # Only include needed files
-          file_pattern: 'system-control system-sha_cache.txt'
+          file_pattern: 'system-control system_sha-cache.txt'
 
       - name: Adding system packages
         uses: smeinecke/apt-repo-action@v2.1.1
