--- a/.github/workflows/update-utils.yml
+++ b/.github/workflows/update-utils.yml
@@ -84,10 +84,7 @@ jobs:
             jammy
             stable
           file: eupnea-utils*.deb
-          file_target_version: |
-            kinetic
-            jammy
-            stable
+          file_target_version: kinetic
           public_key: ${{ secrets.PUBLIC }}
           private_key: ${{ secrets.PRIVATE }}
           key_passphrase: ""
