--- a/.github/workflows/update-system.yml
+++ b/.github/workflows/update-system.yml
@@ -5,6 +5,10 @@ on:
   schedule:
     - cron: "0 0 * * *" # run at the start of every day
   workflow_dispatch:
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 
 jobs:
   check-sha:
